--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <link href="css/style.css" rel="stylesheet" type="text/css" id="theme-opt" />
         <script>
-            let game_path = "/game/quordlegame";
+            let game_path = "/quordlegame";
         </script>
 		<style>
 			.App-header{
