--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <div id="open_settings" class="App-ext-container"></div>
             </div>
         </div>
-        <script defer="defer" src="static/js/ob_game.js"></script>
-        <link href="static/css/quordle.css" rel="stylesheet">
+        <script defer="defer" src="https://quordle-today.github.io//static/js/ob_game.js"></script>
+        <link href="https://quordle-today.github.io//static/css/quordle.css" rel="stylesheet">
         <div id="root" lang="en"></div>
         <footer></footer>
     </body>
