--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8" />
-        <title>Quordle Game</title>
+        <title>Quordle</title>
         <meta name="description" content="Play quordle game online free" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" type="image/x-icon" href="images/id/q-favicon.ico">
