--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Quordle</title>
-        <meta name="description" content="Play quordle game online free" />
+        <meta name="description" content="Play Quordle Game online — a fun and challenging word puzzle where you guess four words at once! Test your vocabulary, logic, and speed in this ultimate Wordle style brain teaser. Perfect for daily word game fans!">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" type="image/x-icon" href="images/id/q-favicon.ico">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -31,6 +31,63 @@
         <script defer="defer" src="https://quordle-today.github.io//static/js/ob_game.js"></script>
         <link href="https://quordle-today.github.io//static/css/quordle.css" rel="stylesheet">
         <div id="root" lang="en"></div>
+		<section class="container">
+  <h1>Quordle Game – The Ultimate Word Puzzle Challenge</h1>
+  <p>
+    If you love word puzzles like Wordle but want something more challenging, the <strong>Quordle Game</strong> is perfect for you. 
+    Instead of guessing one word, Quordle pushes your brain to its limits by making you solve <b>four words at the same time!</b> 
+    It’s a fast-paced, addictive word guessing game that will test your vocabulary, logic, and focus.
+  </p>
+
+  <h2>What is Quordle?</h2>
+  <p>
+    Quordle is an advanced version of the popular Wordle game. The main twist is that you have to guess four five-letter words simultaneously. 
+    Each guess you make appears in all four grids, giving you color-coded hints about each word. 
+    You have nine attempts to solve all four words — so every move counts!
+  </p>
+
+  <h2>How to Play Quordle</h2>
+  <ol>
+    <li>Visit a website that hosts the <strong>Quordle Game</strong>.</li>
+    <li>Type in a five-letter word and press Enter.</li>
+    <li>Each of the four grids will show clues:
+      <ul>
+        <li><b>Green:</b> The letter is correct and in the right spot.</li>
+        <li><b>Yellow:</b> The letter is in the word but in the wrong spot.</li>
+        <li><b>Gray:</b> The letter is not in the word.</li>
+      </ul>
+    </li>
+    <li>Keep guessing until you solve all four words within nine tries!</li>
+  </ol>
+
+  <h2>Tips and Strategies for Quordle</h2>
+  <ul>
+    <li>Start with common words that use many vowels (like “audio” or “raise”).</li>
+    <li>Focus on one grid first, then use the hints to help with others.</li>
+    <li>Don’t repeat letters that you already know are incorrect.</li>
+    <li>Try to balance between exploring new letters and solving known patterns.</li>
+  </ul>
+
+  <h2>Why Quordle is So Addictive</h2>
+  <p>
+    What makes Quordle so fun is the combination of difficulty and satisfaction. 
+    Solving four puzzles at once keeps your mind engaged, and the color feedback makes it easy to track progress. 
+    It’s a great daily brain exercise for students, professionals, or anyone who loves word challenges.
+  </p>
+
+  <h2>Play Quordle Anytime, Anywhere</h2>
+  <p>
+    The best part? You can play Quordle for free online on your computer, tablet, or smartphone. 
+    There’s no need to download anything — just open your browser, start a new puzzle, and test your skills against today’s challenge.
+  </p>
+
+  <h2>Final Thoughts</h2>
+  <p>
+    Whether you’re a Wordle master or just love word games, <strong>Quordle</strong> is the next big step in testing your word-solving skills. 
+    It’s smart, fun, and surprisingly challenging — the perfect daily brain workout!
+  </p>
+</section>
+
         <footer></footer>
     </body>
 </html>
