--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
         <link href="https://quordle-today.github.io//static/css/quordle.css" rel="stylesheet">
         <div id="root" lang="en"></div>
 		<section class="container">
-  <h1>Quordle Game – The Ultimate Word Puzzle Challenge</h1>
+  <h1>Quordle</h1>
   <p>
     If you love word puzzles like Wordle but want something more challenging, the <strong>Quordle Game</strong> is perfect for you. 
     Instead of guessing one word, Quordle pushes your brain to its limits by making you solve <b>four words at the same time!</b> 
-    It’s a fast-paced, addictive word guessing game that will test your vocabulary, logic, and focus.
+    It is a fast-paced, addictive word guessing game that will test your vocabulary, logic, and focus.
   </p>
 
   <h2>What is Quordle?</h2>
   <p>
     Quordle is an advanced version of the popular Wordle game. The main twist is that you have to guess four five-letter words simultaneously. 
-    Each guess you make appears in all four grids, giving you color-coded hints about each word. 
-    You have nine attempts to solve all four words — so every move counts!
+    Each guess you make appears in all four grids, giving you color coded hints about each word. 
+    You have nine attempts to solve all four words, so every move counts!
   </p>
 
   <h2>How to Play Quordle</h2>
@@ -52,9 +52,9 @@
     <li>Type in a five-letter word and press Enter.</li>
     <li>Each of the four grids will show clues:
       <ul>
-        <li><b>Green:</b> The letter is correct and in the right spot.</li>
-        <li><b>Yellow:</b> The letter is in the word but in the wrong spot.</li>
-        <li><b>Gray:</b> The letter is not in the word.</li>
+        <li><span style="background-color: #6aaa64; color: white; padding: 2px 6px; border-radius: 3px;">Green</span> – The letter is correct and in the right spot.</li>
+        <li><span style="background-color: #c9b458; color: white; padding: 2px 6px; border-radius: 3px;">Yellow</span> – The letter is in the word but in the wrong spot.</li>
+        <li><span style="background-color: #787c7e; color: white; padding: 2px 6px; border-radius: 3px;">Gray</span> – The letter is not in the word.</li>
       </ul>
     </li>
     <li>Keep guessing until you solve all four words within nine tries!</li>
@@ -72,19 +72,19 @@
   <p>
     What makes Quordle so fun is the combination of difficulty and satisfaction. 
     Solving four puzzles at once keeps your mind engaged, and the color feedback makes it easy to track progress. 
-    It’s a great daily brain exercise for students, professionals, or anyone who loves word challenges.
+    It is a great daily brain exercise for students, professionals, or anyone who loves word challenges.
   </p>
 
   <h2>Play Quordle Anytime, Anywhere</h2>
   <p>
     The best part? You can play Quordle for free online on your computer, tablet, or smartphone. 
-    There’s no need to download anything — just open your browser, start a new puzzle, and test your skills against today’s challenge.
+    There is no need to download anything just open your browser, start a new puzzle, and test your skills against today challenge.
   </p>
 
   <h2>Final Thoughts</h2>
   <p>
-    Whether you’re a Wordle master or just love word games, <strong>Quordle</strong> is the next big step in testing your word-solving skills. 
-    It’s smart, fun, and surprisingly challenging — the perfect daily brain workout!
+    Whether you are a Wordle master or just love word games, <strong>Quordle</strong> is the next big step in testing your word-solving skills. 
+    It’s smart, fun, and surprisingly challenging the perfect daily brain workout!
   </p>
 </section>
 
