--- a/index.html
+++ b/index.html
@@ -128,6 +128,16 @@ span[style*="background-color"] {
 }
 </style>
 
+		<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JLBZ6PN56L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JLBZ6PN56L');
+</script>
+
     </head>
     <body>
         <div class="App-header">
